--- a/software/build
+++ b/software/build
@@ -7,7 +7,8 @@ echo "Building server"
 g++ -Wall server.cpp network/SocketServer.cpp network/ConnectionHandler.cpp -o server -pthread
 echo "Copying clientTest and server to ${HOME}/bin"
 cp clientTest ${HOME}/bin/
-cp server ${HOME}/bin/
+# Note the name change - 'server' is too generic.
+cp server ${HOME}/bin/gasmeterserver
 
 cd ..
 echo "Building countpulses"
